[package]
name = "tari_storage"
authors = ["The Tari Development Community"]
description = "Key-Value store API for the Tari project"
repository = "https://github.com/tari-project/tari"
homepage = "https://tari.com"
readme = "README.md"
license = "BSD-3-Clause"
version = "0.25.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
log = "0.4.14"
lmdb-zero = "0.4.4"
thiserror = "1.0.30"
serde = { version ="1.0.133", features=["derive"]}

[dev-dependencies]
rand = "0.8.4"
tari_utilities = "^0.3"